// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <span
      class="sc-ivTmOn dNJphr sc-llJcti DBbdK sc-ZyCDH gpKjfs sc-jOhDuK bdSPxH"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <span
      class="sc-ivTmOn dNJphr sc-llJcti cYBrip sc-ZyCDH gpKjfs sc-jOhDuK dWCTrg"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
